## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for the top directory
##
## $Id: Makefile.am,v 1.1.1.1 2005-05-12 09:06:18 n-ando Exp $
##
## $Log: not supported by cvs2svn $
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = build rtm utils etc swig examples docs

EXTRA_DIST = \
	INSTALL.jp \
	TUTORIAL.jp \
	README.jp

clean-local:
	rm -f *~ *.core
