## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for the top directory
##
## $Id$
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = build src utils examples etc docs win32

EXTRA_DIST =        \
	README      \
	README.jp   \
	COPYRIGHT   \
	COPYING.LIB \
	INSTALL     \
	INSTALL.jp

clean-local:
	rm -f *~ *.core

